Add adaptiv for laptop

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </ul>
           </div>
           <div class="footer-sertificate">
-            <p>Свидетельство о регистрации  Эл №ФС77-47162</p>
+            Свидетельство о регистрации  Эл №ФС77-47162
           </div>
         </div>
         <div class="footer-career">
